syntax = "proto3";

package tapioca;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "pkg/proto/manifest.proto";

option go_package = "pkg/proto";

message ProjectConfig {
  uint32 id = 1;
  uint32 default_branch = 2;
  map<uint32, BranchConfig> branches = 3;
  // Required: Platform specific launch options. Map keys are Platform values.
  // These values are overriden by branch specific options if they are present.
  map<uint32, LaunchOptions> launch_options = 4;
  GarbageCollectionPolicy garbage_collection_policy = 5;
  // Required: the URL prefix to download objects from.
  string block_storage_prefix = 6;
}

// Determines the build purge policy of a project.
//
// Purged builds do not have their data deleted, but will have the refrence
// originating from the build deleted.
message GarbageCollectionPolicy {
  // Builds older than a given retention duration will be purged.
  //
  // If unset, builds are indefinitely until manually purged.
  //
  // Exception: At least one build per branch/target combination will be
  // retained of what this is set to.
  google.protobuf.Duration retention_duration = 1;

  // The number of builds to retain per branch/target combionation. As new
  // builds are pushed.
  //
  // If not set, the value is assumed to be 1.
  uint64 retained_builds = 2;
}

message LaunchOptions {
  // The path of game executable that is to be launched, relative to the root
  // directory of the build.
  //
  // Note: path is seperated by '/' path seperator.
  string executable = 1;
  // The additional command line flags used when launching on a platform.
  repeated string launch_flags = 2;
}

// ID: 8 bytes:
//     {4-byte Project ID} +
//     {4-byte branch name fingerprint}
message BranchConfig {
  uint32 project_id = 1;
  uint32 id = 2;
  // Source control branch name.
  string name = 3;
  // Optional: Human facing display name for the branch
  string display_name = 4;
  // Optional: Platform specific launch options. Map keys are Platform values.
  // Overrides project wide launch options when provided.
  map<uint32, LaunchOptions> launch_options = 5;
}

message BuildProto {
  message Metadata {
    // Required: The source control commit hash.
    bytes source_commit = 1;

    // Reqired: The timestamp the build was created at.
    google.protobuf.Timestamp build_timestamp = 2;

    // Required: The target platform for the build
    tapioca.Target target = 3;
  }

  // ID: 14 bytes:
  //     {8-byte Branch ID} +
  //     {4-byte truncated SHA-1 of commit}
  //     {2-byte target} +
  bytes id = 1;

  // The build manifest
  tapioca.ManifestProto manifest = 2;

  Metadata metadata = 3;

  // Information on how to launch the build.
  LaunchOptions launch_options = 4;
}

// ID: 78 bytes:
//     {64-byte block SHA-512} +
//     {14-byte block build hash}

message BlockInfo {}
